Notificacao de email ao criar funcionario e usuario; Ajustes nos controllers, uso do modelmapper;

--- a/backend/crud-api/src/main/resources/messages.properties
+++ b/backend/crud-api/src/main/resources/messages.properties
@@ -13,13 +13,13 @@ cpf=CPF
 salario=Salário
 
 # Empresa
-empresaInput.nomeFantasia=Nome fantasia
-empresaInput.cnpj=CNPJ da empresa
-empresaInput.id=Empresa
+empresa.nomeFantasia=Nome fantasia
+empresa.cnpj=CNPJ da empresa
+empresa.id=Empresa
 
 # Usuario
 senha=Senha
 
 #Cargo
-cargoInput.nome=Nome do cargo
-cargoInput.id=Cargo
+cargo.nome=Nome do cargo
+cargo.id=Cargo
